# work-session-tracker

./: .gitignore  CLAUDE.md  Cargo.toml  LINTER_FIXES.md  README.md  docker-compose.yml  railway.toml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-0b61ee2a451893aeaa3795bd2562e567612a5cd3276b0315b1dcf9614e8022e8.json  query-2d55e25aadf68d053acb7477a0f97ddb31181880cf911f7fa36ed5742b50d1e9.json  query-310c4cacf2e3a25f59272532dad044f8da30102a3a4b1f91b6d2a8c0acf609a6.json  query-4fa9ca74c8566a126f54ccd033439c6cc6d9d544b735e8c8ab8b2d35139392b9.json  query-67ee8d61b9b19da51cb1d4eac6a2ece9a425f54945536929246805cffbe6fa8a.json  query-726586a5ba32e853890aaaf4abf12a2b4d8850413b4604ccc31b0975c9d82914.json  query-88c3ab6211128ccd40b4376f031e78e9be4de92ebbc373dcfa116a35d9c66d90.json  query-98a3907886c24f4a4d1e245869360f0c1120ddc1152d92126b82e7102674a978.json  query-9b34189389ada62c53e3cde5b8f7ab88c173e64d352417a495e5e9e3a7fcd227.json  query-9f615a41ecaebce16df5e43c95c5ac794b9b19f6c48a3d91b9ec86504c52c526.json  query-ad9478a68eb84d3dd727bcedc1a0b1c172f95e87dd691e4b25868b72fd1bb27d.json  query-cacf6cc34ab5f31e0ca60e64752614f0688211232816d853b68ae23263b2545d.json  query-e8a9198fc0e2cad55f5999e116160ca9e18d2e49f4fd22db692f61da9a5eb4e3.json
backend/migrations/: 001_initial.sql
backend/src/: db.rs  handlers.rs  main.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx-railway.conf  nginx.conf
frontend/src/: api.rs  main.rs
frontend/src/pages/: home.rs  mod.rs  session_detail.rs  sessions.rs  tags.rs
shared/: Cargo.toml
shared/src/: lib.rs
